<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:background="@color/main_color"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    >

    <com.google.android.material.navigation.NavigationView
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:background="@color/Red100"
        android:layout_gravity="start"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/Main_signOut_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/main_color"
                    android:contentDescription="@string/sign_out"
                    android:src="@drawable/logout"
                    app:backgroundTint="@color/main_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/Main_username_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="35dp"
                    android:text="marshall mathers"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/Main_welcome_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/welcome"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                >

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/Main_nav"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginEnd="6dp"
                    android:background="@drawable/checkout"
                    android:paddingLeft="5dp"
                    app:title="@null"
                    app:iconTint="@null"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape"
                    android:backgroundTint="@color/Red100"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/Main_searchText"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:background="@drawable/shape"
                        android:backgroundTint="@color/Red100"
                        android:ems="10"
                        android:hint="@string/search_for_food"
                        android:inputType="text"
                        android:padding="8dp"
                        tools:ignore="NestedWeights" />

                    <ImageView
                        android:id="@+id/Main_magnifyingGlass"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:background="@drawable/shape"
                        android:backgroundTint="@color/Red100"
                        android:src="@drawable/search_icon" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/Main_cart_IMG"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/checkout"
                    android:padding="12dp"
                    android:src="@drawable/basket" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"

                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="0.33333"
                    android:background="@drawable/shape"
                    android:backgroundTint="#FEDDCE"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/location"

                        />

                    <Spinner
                        android:id="@+id/locationSp"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:spinnerMode="dropdown"
                        android:background="@null" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="0.33333"
                    android:background="@drawable/shape"
                    android:backgroundTint="#FEDDCE"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/main_time" />

                    <Spinner
                        android:id="@+id/timeSp"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:background="@null"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="0.33333"
                    android:background="@drawable/shape"
                    android:backgroundTint="#FEDDCE"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/dollar" />

                    <Spinner
                        android:id="@+id/dollarSp"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:background="@null"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/Main_todayBest"
                    android:layout_width="wrap_content"
                    android:layout_height="62dp"
                    android:layout_weight="1"
                    android:paddingStart="16dp"
                    android:text="@string/today_s_best"
                    android:textColor="@color/black"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/Main_viewAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="32dp"
                    android:text="@string/view_all"

                    android:textColor="@color/Red700Darker" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:minHeight="250dp">
                <fragment
                    android:id="@+id/bestFoods_fragment"
                    android:name="com.example.food4you.Fragments.BestFoodsFragment"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    tools:ignore="MissingClass" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Main_chooseCat"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:text="@string/choose_category"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <fragment
                    android:id="@+id/fragment_container"
                    android:name="com.example.food4you.Fragments.CategoryFragment"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    tools:ignore="MissingClass" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>